welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:8: error: not found: value estsurBiscuit
    while (!estsurBiscuit()) {
            ^