welcome.lessons.welcome.summative.Moria.scala.code
def exo() {
  droite() ; droite()
  while(!estFaceMur()) {
    while (!estSurBiscuit()) {
      avance()
    }
    prendBiscuit() ; droite() ; droite()
    while (!estsurBiscuit()) {
      avance()
    }
    droite() ; droite() ; avance()
    
  }  
}




